--- a/etc/icinga2/features-available/elasticsearch.conf
+++ b/etc/icinga2/features-available/elasticsearch.conf
@@ -1,6 +1,6 @@
 library "perfdata"
 
-object ElasticWriter "elastic" {
+object ElasticsearchWriter "elasticsearch" {
   //host = "127.0.0.1"
   //port = 9200
   //index = "icinga2"
