Implement DummyCheckTask and move dummy into embedded in-memory checks
This replaces the previous "dummy" CheckCommand, and the user won't
notice it. Provided performance data will be parsed the same way.

This saves a shell fork and check_dummy execution.

We're relying on this when creating cluster checks with Icinga 2 DSL
and more. If one does not have the plugins installed, this then also works.

fixes #5740

--- a/lib/methods/CMakeLists.txt
+++ b/lib/methods/CMakeLists.txt
@@ -24,8 +24,9 @@ else()
 endif()
 
 set(methods_SOURCES
-  clusterchecktask.cpp clusterzonechecktask.cpp exceptionchecktask.cpp
-  icingachecktask.cpp methods-itl.cpp nullchecktask.cpp nulleventtask.cpp
+  clusterchecktask.cpp clusterzonechecktask.cpp dummychecktask.cpp
+  exceptionchecktask.cpp icingachecktask.cpp methods-itl.cpp
+  nullchecktask.cpp nulleventtask.cpp
   pluginchecktask.cpp plugineventtask.cpp pluginnotificationtask.cpp
   randomchecktask.cpp timeperiodtask.cpp ${WindowsSources}
 )
