--- a/etc/icinga2/features-available/elasticsearch.conf
+++ b/etc/icinga2/features-available/elasticsearch.conf
@@ -4,7 +4,7 @@ object ElasticsearchWriter "elasticsearch" {
   //host = "127.0.0.1"
   //port = 9200
   //index = "icinga2"
-  //send_enable_perfdata = false
+  //enable_send_perfdata = false
   //flush_threshold = 1024
   //flush_interval = 10s
 }
