ITL: Add check_rpc

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -3109,3 +3109,44 @@ object CheckCommand "nscp_api" {
 
 	vars.nscp_api_host = "$check_address$"
 }
+
+object CheckCommand "rpc" {
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_rpc" ]
+
+	arguments = {
+		"-H" = {
+			value = "$rpc_address$"
+			description = "RPC host address"
+			required = true
+		}
+		"-C" = {
+			value = "$rpc_command$"
+			description = "Programm name (or number)"
+			required = true
+		}
+		"-p" = {
+			value = "$rpc_port$"
+			description = "RPC port"
+		}
+		"-c" = {
+			value = "$rpc_version$"
+			description = "The version to check"
+		}
+		"-u" = {
+			set_if = "$rpc_udp$"
+			description = "Test UDP"
+		}
+		"-t" = {
+			set_if = "$rpc_tcp$"
+			description	= "Test TCP"
+		}
+		"-v" = {
+			set_if = "$rpc_verbose$"
+			description = "Show verbose details"
+		}
+	}
+
+	vars.rpc_address = "$check_address$"
+}
