Add support for LD_LIBRARY_PATH env variable in oracle_health ITL CheckCommand
Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -505,6 +505,7 @@ object CheckCommand "oracle_health" {
 
 	env = {
 		"ORACLE_HOME" = "$oracle_home$"
+		"LD_LIBRARY_PATH" = "$oracle_ld_library_path$"
 		"TNS_ADMIN" = "$oracle_tns_admin$"
 	}
 
@@ -515,6 +516,7 @@ object CheckCommand "oracle_health" {
 	vars.oracle_health_report = "long"
 
 	vars.oracle_home = "/usr/lib/oracle/11.2/client64/lib"
+	vars.oracle_ld_library_path = "/usr/lib/oracle/11.2/client64/lib"
 	vars.oracle_tns_admin = SysconfDir + "/icinga2/plugin-configs"
 }
 
