Fix for oracle_health checker
Adding LD_LIBRARY_PATH as env can fix the problem of oracle_health checker.

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -505,6 +505,7 @@ object CheckCommand "oracle_health" {
 
 	env = {
 		"ORACLE_HOME" = "$oracle_home$"
+		"LD_LIBRARY_PATH" = "$oracle_home$"
 		"TNS_ADMIN" = "$oracle_tns_admin$"
 	}
 
