Added NSCP query method using NSCP's NRPEServer abd its local check_nrpe.exe
Added NSCP query method using NSCP's NRPEServer abd its local check_nrpe.exe

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -293,3 +293,53 @@ object CheckCommand "nscp-local-counter" {
 	vars.nscp_counter_less = false
 	vars.nscp_counter_perfsyntax = "$nscp_counter_name$"
 }
+
+object CheckCommand "nscp_nrpe" {
+    command = [ NscpPath + "\\check_nrpe.exe" ]
+
+    arguments = {
+        "-H" = {
+            value = "$nscp_nrpe_host$"
+            description = "The hostname/IP of the host running the NRPE daemon"
+        }
+        "-P" = {
+            value = "$nscp_nrpe_port$"
+            description = "The port of the host running the NRPE daemon"
+        }
+        "-t" = {
+            value = "$nscp_nrpe_timeout$"
+            description = "Number of seconds before connection times out (default=10)"
+        }
+        "-c" = {
+            value = "$nscp_nrpe_command$"
+            description = "The name of the command that the remote daemon should run"
+        }
+        "--ssl" = {
+            set_if = "$nscp_nrpe_ssl$"
+            description = "Initiate a ssl handshake with the NRPE server"
+        }
+        "-a" = {
+            value = "$nscp_nrpe_arguments$"
+            description = "The command line argument(s)"
+            repeat_key = true
+        }
+        "--insecure" = {
+            set_if = "$nscp_nrpe_insecure$"
+            description = "Use the insecure legacy mode"
+        }
+        "--payload-length" = {
+            value = "$nscp_nrpe_payload_length$"
+            description = "Length of payload (has to be same as on the server)"
+        }
+        "--buffer-length" = {
+            value = "$nscp_nrpe_buffer_length$"
+            description = "Length of payload to/from the NRPE agent. This is a hard specific value so you have to 'configure' (read recompile) your NRPE agent to use the same value for it to work"
+        }
+    }
+
+    vars.nscp_nrpe_host = "127.0.0.1"
+    vars.nscp_nrpe_port = 5666
+    vars.nscp_nrpe_timeout = 10
+    vars.nscp_nrpe_ssl = true
+    timeout = 5m
+}
