Add parameter --octetlength to snmp-storage command.

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -201,6 +201,10 @@ object CheckCommand "snmp-storage" {
 			set_if = "$snmp_perf$"
 			description = "Perfparse compatible output"
 		}
+		"-o" = {
+			value = "$snmp_storage_olength$"
+			description = "Max-size of the SNMP message, usefull in case of Too Long responses."
+		}
 	}
 
 	vars.snmp_storage_name = "^/$$"
