Add check_openmanage command to ITL.
This will help monitoring Dell PowerEdge servers hardware.

--- a/itl/plugins-contrib.d/hardware.conf
+++ b/itl/plugins-contrib.d/hardware.conf
@@ -96,3 +96,111 @@ object CheckCommand "hpasm" {
 	vars.hpasm_remote = true
 	vars.hpasm_hostname = "$check_address$"
 }
+
+object CheckCommand "openmanage" {
+	import "plugin-check-command"
+	command = [ PluginContribDir + "/check_openmanage" ]
+	arguments += {
+		"--all" = {
+			set_if = "$openmanage_all$"
+			description = "Check everything, even log content"
+		}
+		"--blacklist" = {
+			value = "$openmanage_blacklist$"
+			repeat_key = true
+			description = "Blacklist missing and/or failed components"
+		}
+		"--check" = {
+			value = "$openmanage_check$"
+			description = "Fine-tune which components are checked"
+		}
+		"--community" = {
+			value = "$openmanage_community$"
+			description = "SNMP community string [default=public]"
+		}
+		"--config" = {
+			value = "$openmanage_config$"
+			description = "Specify configuration file"
+		}
+		"--critical" = {
+			value = "$openmanage_critical$"
+			description = "Custom temperature critical limits"
+		}
+		"--extinfo" = {
+			set_if = "$openmanage_extinfo$"
+			description = "Append system info to alerts"
+		}
+		"--fahrenheit" = {
+			set_if = "$openmanage_fahrenheit$"
+			description = "Use Fahrenheit as temperature unit"
+		}
+		"--hostname" = {
+			value = "$openmanage_hostname$"
+			description = "Hostname or IP (required for SNMP)"
+		}
+		"--htmlinfo" = {
+			set_if = "$openmanage_htmlinfo$"
+			description = "HTML output with clickable links"
+		}
+		"--info" = {
+			set_if = "$openmanage_info$"
+			description = "Prefix any alerts with the service tag"
+		}
+		"--ipv6" = {
+			set_if = "$openmanage_ipv6$"
+			description = "Use IPv6 instead of IPv4 [default=no]"
+		}
+		"--legacy-perfdata" = {
+			set_if = "$openmanage_legacy_perfdata$"
+			description = "legacy performance data output"
+		}
+		"--no-storage" = {
+			set_if = "$openmanage_no_storage$"
+			description = "Don't check storage"
+		}
+		"--only" = {
+			value = "$openmanage_only$"
+			description = "Only check a certain component or alert type"
+		}
+		"--perfdata" = {
+			set_if = "$openmanage_perfdata$"
+			description = "Output performance data [default=no]"
+		}
+		"--port" = {
+			value = "$openmanage_port$"
+			description = "SNMP port number [default=161]"
+		}
+		"--protocol" = {
+			value = "$openmanage_protocol$"
+			description = "SNMP protocol version [default=2c]"
+		}
+		"--short-state" = {
+			set_if = "$openmanage_short_state$"
+			description = "Prefix alerts with alert state abbreviated"
+		}
+		"--show-blacklist" = {
+			set_if = "$openmanage_show_blacklist$"
+			description = "Show blacklistings in OK output"
+		}
+		"--state" = {
+			set_if = "$openmanage_state$"
+			description = "Prefix alerts with alert state"
+		}
+		"--tcp" = {
+			set_if = "$openmanage_tcp$"
+			description = "Use TCP instead of UDP [default=no]"
+		}
+		"--timeout" = {
+			value = "$openmanage_timeout$"
+			description = "Plugin timeout in seconds [default=30]"
+		}
+		"--vdisk-critical" = {
+			set_if = "$openmanage_vdisk_critical$"
+			description = "Make any alerts on virtual disks critical"
+		}
+		"--warning" = {
+			value = "$openmanage_warning$"
+			description = "Custom temperature warning limits"
+		}
+	}
+}
