--- a/lib/db_ido_mysql/CMakeLists.txt
+++ b/lib/db_ido_mysql/CMakeLists.txt
@@ -18,7 +18,7 @@
 mkclass_target(idomysqlconnection.ti idomysqlconnection.tcpp idomysqlconnection.thpp)
 
 set(db_ido_mysql_SOURCES
-  idomysqlconnection.cpp idomysqlconnection.thpp
+  idomysqlconnection.cpp idomysqlconnection.hpp idomysqlconnection.thpp
 )
 
 if(ICINGA2_UNITY_BUILD)
