--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,13 +20,30 @@ set(Boost_USE_STATIC_LIBS OFF)
 include(BoostTestTargets)
 
 set(base_test_SOURCES
-  base-array.cpp base-base64.cpp base-convert.cpp base-dictionary.cpp base-fifo.cpp
-  base-json.cpp base-match.cpp base-netstring.cpp base-object.cpp
-  base-serialize.cpp base-shellescape.cpp base-stacktrace.cpp
-  base-stream.cpp base-string.cpp base-timer.cpp base-type.cpp
-  base-value.cpp config-ops.cpp icinga-checkresult.cpp icinga-legacytimeperiod.cpp
-  icinga-macros.cpp icinga-notification.cpp
-  icinga-perfdata.cpp remote-url.cpp
+  base-array.cpp
+  base-base64.cpp
+  base-convert.cpp
+  base-dictionary.cpp
+  base-fifo.cpp
+  base-json.cpp
+  base-match.cpp
+  base-netstring.cpp
+  base-object.cpp
+  base-serialize.cpp
+  base-shellescape.cpp
+  base-stacktrace.cpp
+  base-stream.cpp
+  base-string.cpp
+  base-timer.cpp
+  base-type.cpp
+  base-value.cpp
+  config-ops.cpp
+  icinga-checkresult.cpp
+  icinga-legacytimeperiod.cpp
+  icinga-macros.cpp
+  icinga-notification.cpp
+  icinga-perfdata.cpp
+  remote-url.cpp
 )
 
 if(ICINGA2_UNITY_BUILD)
@@ -126,6 +143,7 @@ add_whole_static_library(${base_TARGET_NAME} icinga)
 
 if(ICINGA2_WITH_LIVESTATUS)
   set(livestatus_test_SOURCES
+    livestatus-fixture.cpp
     livestatus.cpp
   )
 
@@ -134,7 +152,7 @@ if(ICINGA2_WITH_LIVESTATUS)
   endif()
 
   add_boost_test(livestatus
-    SOURCES test-runner.cpp livestatus-fixture.cpp ${livestatus_test_SOURCES}
+    SOURCES test-runner.cpp ${livestatus_test_SOURCES}
     TESTS livestatus/hosts livestatus/services
   )
 
@@ -146,7 +164,8 @@ if(ICINGA2_WITH_LIVESTATUS)
 endif()
 
 set(icinga_checkable_test_SOURCES
-    icinga-checkable-flapping.cpp
+  icinga-checkable-fixture.cpp
+  icinga-checkable-flapping.cpp
 )
 
 if(ICINGA2_UNITY_BUILD)
@@ -154,7 +173,7 @@ if(ICINGA2_UNITY_BUILD)
 endif()
 
 add_boost_test(icinga_checkable
-  SOURCES test-runner.cpp icinga-checkable-test.cpp ${icinga_checkable_test_SOURCES}
+  SOURCES test-runner.cpp ${icinga_checkable_test_SOURCES}
   TESTS icinga_checkable_flapping/host_not_flapping
         icinga_checkable_flapping/host_flapping
         icinga_checkable_flapping/host_flapping_recover
