--- a/tools/mkclass/CMakeLists.txt
+++ b/tools/mkclass/CMakeLists.txt
@@ -29,7 +29,14 @@ endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(mkclass mkclass.cpp classcompiler.cpp classcompiler.hpp ${FLEX_class_lexer_OUTPUTS} ${BISON_class_parser_OUTPUTS})
+set(mkclass_SOURCES
+  mkclass.cpp
+  classcompiler.cpp classcompiler.hpp
+  ${FLEX_class_lexer_OUTPUTS}
+  ${BISON_class_parser_OUTPUTS}
+)
+
+add_executable(mkclass ${mkclass_SOURCES})
 
 if(WIN32)
   target_link_libraries(mkclass shlwapi)
