--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -24,57 +24,63 @@ set_target_properties (
   check_nscp_api PROPERTIES
   INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
   DEFINE_SYMBOL I2_PLUGINS_BUILD
-  FOLDER Plugins )
+  FOLDER Plugins)
 
 # Prefer the PluginDir constant which is set to /sbin on Windows
 
-if ( WIN32 )
-  install ( TARGETS check_nscp_api RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
+if(WIN32)
+    install(TARGETS check_nscp_api RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR})
 else()
-  install ( TARGETS check_nscp_api RUNTIME DESTINATION ${ICINGA2_PLUGINDIR} )
+    install(TARGETS check_nscp_api RUNTIME DESTINATION ${ICINGA2_PLUGINDIR})
 endif()
 
-if ( WIN32 )
+if (WIN32)
+    add_definitions(-DUNICODE -D_UNICODE)
 
-  add_definitions ( -DUNICODE -D_UNICODE )
+    set(thresholds_SOURCES
+      thresholds.cpp thresholds.h
+    )
 
-  add_library ( thresholds thresholds )
-    set_target_properties (
-    thresholds PROPERTIES
-    INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
-    FOLDER Plugins
-  )
+    add_library(thresholds ${thresholds_SOURCES})
 
-  list ( APPEND check_SOURCES
-    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_perfmon.cpp
-    check_ping.cpp check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp
-    check_users.cpp )
+    set_target_properties(
+      thresholds PROPERTIES
+      INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
+      FOLDER Plugins
+    )
 
-  foreach ( source ${check_SOURCES} )
-    string ( REGEX REPLACE ".cpp\$" "" check_OUT "${source}" )
-    string ( REGEX REPLACE ".cpp\$" ".h" check_HEADER "${source}" )
+    set(check_SOURCES
+      check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_perfmon.cpp
+      check_ping.cpp check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp
+      check_users.cpp
+    )
 
-    add_executable ( ${check_OUT} ${source} ${check_HEADER} )
-    target_link_libraries ( ${check_OUT} thresholds Shlwapi.lib ${Boost_PROGRAM_OPTIONS_LIBRARY} )
+  foreach(source ${check_SOURCES})
+    string(REGEX REPLACE ".cpp\$" "" check_OUT "${source}")
+    string(REGEX REPLACE ".cpp\$" ".h" check_HEADER "${source}")
 
-    set_target_properties (
+    add_executable(${check_OUT} ${source} ${check_HEADER})
+    target_link_libraries(${check_OUT} thresholds Shlwapi.lib ${Boost_PROGRAM_OPTIONS_LIBRARY})
+
+    set_target_properties(
       ${check_OUT} PROPERTIES
       INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
       DEFINE_SYMBOL I2_PLUGINS_BUILD
-      FOLDER Plugins )
-  endforeach ( source )
+      FOLDER Plugins
+    )
+  endforeach()
 
-  target_link_libraries ( check_load Pdh.lib )
-  target_link_libraries ( check_network Pdh.lib Iphlpapi.lib)
-  target_link_libraries ( check_perfmon Pdh.lib )
-  target_link_libraries ( check_ping Ntdll.lib iphlpapi.lib Ws2_32.lib )
-  target_link_libraries ( check_procs Pdh.lib )
-  target_link_libraries ( check_uptime ${Boost_SYSTEM_LIBRARY} )
-  target_link_libraries ( check_users wtsapi32.lib )
+  target_link_libraries(check_load Pdh.lib)
+  target_link_libraries(check_network Pdh.lib Iphlpapi.lib)
+  target_link_libraries(check_perfmon Pdh.lib)
+  target_link_libraries(check_ping Ntdll.lib iphlpapi.lib Ws2_32.lib)
+  target_link_libraries(check_procs Pdh.lib)
+  target_link_libraries(check_uptime ${Boost_SYSTEM_LIBRARY})
+  target_link_libraries(check_users wtsapi32.lib)
 
-  install (
+  install(
     TARGETS check_disk check_load check_memory check_network check_perfmon check_procs
       check_ping check_service check_swap check_update check_uptime check_users
-    RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
-
+    RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}
+  )
 endif ( )
