--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -26,7 +26,8 @@ set_target_properties (
   check_nscp_api PROPERTIES
   INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
   DEFINE_SYMBOL I2_PLUGINS_BUILD
-  FOLDER Plugins)
+  FOLDER Plugins
+)
 
 # Prefer the PluginDir constant which is set to /sbin on Windows
 
